# sagi

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile
abi/: erc721.json
contracts/: hardhat.config.ts
contracts/contracts/: TokenERC20.sol  TokenERC404.sol  TokenERC721.sol
contracts/scripts/: scripts.ts
contracts/test/: erc20.test.ts  erc404.test.ts  erc721.test.ts
docker/: Dockerfile  docker-compose.yaml  start.sh
docker/conf/: develop.yml
docs/openapi/: sagi-api.md  sagi-openapi.swagger.yaml
lib/logger/: Cargo.toml
lib/openapi/: Cargo.toml
lib/service-db/: diesel.toml  install_db.sh
openapi/: .env.example  .gitignore  Cargo.toml  Makefile
openapi-ethers/src/: config.rs  erc20.rs  provider.rs
openapi-logger/: Cargo.toml
openapi-proto/: Cargo.toml
openapi-proto/proto/: auth_telegram.proto  erc20.proto  erc404.proto  erc721.proto  services.proto  zion_authorization.proto
openapi-proto/src/: lib.rs
openapi-proto/swagger/: sagi-openapi.swagger.yaml
openapi-server/: Cargo.toml
openapi-server/src/: cache.rs  config.rs  main.rs  server.rs
openapi/contracts/: args.js  erc20-args.js  hardhat.config.ts
openapi/contracts/contracts/: TokenERC20.sol  TokenERC404.sol  TokenERC721.sol
openapi/contracts/contracts/common/: ERC20.sol  ERC404.sol  ERC721.sol  ERC721URIStorage.sol
openapi/contracts/contracts/interfaces/: IERC1155.sol  IERC20.sol  IERC404.sol  IERC404Metadata.sol
openapi/contracts/scripts/: deploy-erc20.ts  deploy-erc404.ts  scripts.ts
openapi/contracts/test/: erc404.test.ts  erc721.test.ts
openapi/docs/openapi/: sagi-openapi.swagger.yaml
openapi/lib/service-db/: Cargo.toml  build.rs  diesel.toml
openapi/lib/service-db/migrations/2024-07-02-085505_create_bills_table/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-12-024804_create_service_webhood_collection/: up.sql
openapi/lib/service-db/migrations/2024-08-12-024804_create_services_webhood/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-12-032737_create_events/: up.sql
openapi/lib/service-db/migrations/2024-08-12-033735_create_service_collection/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-12-033735_create_services_collections/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-12-071800_create_services/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-19-025011_create_services_token/: down.sql  up.sql
openapi/lib/service-db/migrations/2024-08-19-025022_create_service_webhood_token/: up.sql
openapi/lib/service-db/migrations/2024-08-19-025615_create_events_erc20/: down.sql  up.sql
openapi/lib/service-db/src/: lib.rs  models.rs  schema.rs
openapi/lib/service-db/src/repositories/: bill.rs  events.rs  mod.rs  nftevents.rs  services.rs  services_collection.rs  services_collection_webhood.rs  services_token.rs  services_webhood.rs  state.rs
openapi/lib/service-etherman/: Cargo.toml
openapi/lib/service-etherman/src/: abi.rs  config.rs  etherman.rs  lib.rs  model.rs  utils.rs  webhood.rs
openapi/lib/service-etherman/src/error/: api.rs  mod.rs
openapi/lib/service-etherman/src/nft/: etherman.rs  nftwebhood.rs
openapi/lib/service-etherman/src/token/: tokenwebhood.rs
openapi/openapi-ethers/: Cargo.toml
openapi/openapi-ethers/src/: client.rs  config.rs  erc20.rs  erc404.rs  erc721.rs  lib.rs  provider.rs
openapi/openapi-proto/: Cargo.toml  build.rs
openapi/openapi-proto/proto/: api_config_http.yaml  auth_telegram.proto  erc20.proto  erc404.proto  erc721.proto  services.proto
openapi/openapi-proto/src/: lib.rs
openapi/openapi-proto/swagger/: sagi-openapi.swagger.yaml
openapi/openapi-server/: Cargo.toml
openapi/openapi-server/src/: cache.rs  config.rs  main.rs  proto.rs  server.rs
openapi/openapi-server/src/entity/: telegram.rs
openapi/openapi-server/src/error/: api.rs  onchain.rs
openapi/openapi-server/src/helpers/: http_auth.rs  into.rs  jwk.rs  mod.rs  reverted_error.rs  telegram.rs  utils.rs
openapi/openapi-server/src/services/: authtelegram.rs  erc20.rs  erc404.rs  erc721.rs  mod.rs  serviceszion.rs  utils.rs  zionauthorization.rs
ops/docker/: docker-compose.yaml
sdk/rust/zion-aa/: Cargo.toml  Makefile
sdk/rust/zion-aa/src/: constants.rs  lib.rs
sdk/rust/zion-aa/src/abi/: EntryPoint.json
sdk/rust/zion-aa/src/contract_wallet/: client.rs  mod.rs  operator.rs  sign.rs  test.rs  wallet.rs
sdk/rust/zion-aa/src/contract_wallet/test/: helper.rs  mod.rs
sdk/rust/zion-aa/src/contract_wallet/test/abi/: erc20.json  erc404.json
sdk/rust/zion-aa/src/contract_wallet/test/inputs/: jwt.data  login-data.json
sdk/rust/zion-aa/src/contracts/: mod.rs
sdk/rust/zion-aa/src/contracts/abi/: Account.json  EntryPoint.json  Factory.json  VerifyPaymaster.json
sdk/rust/zion-aa/src/signer/: mod.rs  sig_part.rs
sdk/rust/zion-aa/src/signer/keys/: erc1271_wallet.rs  key_jwt.rs  mod.rs  pincode.rs  secp256k1.rs
sdk/rust/zion-aa/src/types/: contract_wallet.rs  jwt.rs  key.rs  login.rs  mod.rs  otp.rs  user.rs  user_operation.rs
sdk/rust/zion-aa/src/types/request/: authorization.rs  mod.rs  proof.rs
sdk/rust/zion-aa/src/types/user_operation/: hash.rs  mod.rs  request.rs
sdk/rust/zion-aa/src/utils/: jwt.rs  mod.rs  zero_knowledge.rs
subgraph/: .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json
subgraph/config/: config.yaml  generate-docker-compose.js  generate-networks.js  generate-subgraph.js
subgraph/erc20/: Makefile  networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/erc404/: Makefile  networks.json  package.json  schema.graphql  subgraph.yaml
subgraph/erc721/: Makefile  docker-compose.yml  networks.json  package.json  schema.graphql  subgraph.yaml
subgraphs/: subgraph.yaml
webhook-db/: Cargo.toml
webhook-db/src/: database.rs  (+2 more)
webhook-etherman/: Cargo.toml  Readme.txt
webhook-etherman/src/: abi.rs  config.rs  etherman_state.rs  lib.rs  utils.rs
webhook-etherman/src/nft/: etherman.rs  mod.rs  nftwebhook.rs
webhook-etherman/src/token/: etherman_token.rs  mod.rs  tokenwebhook.rs
(+114 files in other folders)
