[workspace]
resolver = "2"

members = ["bin/*", "lib/*"]

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_json_path = "0.6.7"
serde_yaml = "0.9.34"
serde_with = { version = "3.9.0", features = ["hex", "base64"] }
anyhow = "1.0.81"
chrono = "0.4.38"
time = { version = "0.3", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
    "serde",
] }

dotenv = "0.15.0"
futures = "0.3.30"
once_cell = "1.19.0"
thiserror = "1.0.62"

futures-util = { version = "0.3.17", default-features = false, features = [
    "std",
] }

# tracing logger
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# grpc
tonic = { version = "0.8", features = ["tls", "tls-roots", "tls-webpki-roots"] }
prost = "0.11"
actix-prost = { git = "https://github.com/blockscout/actix-prost" }
actix-prost-macros = { git = "https://github.com/blockscout/actix-prost" }
blockscout-service-launcher = "0.12.1"

jwt-simple = { version = "0.12.6", default-features = false, features = [
    "pure-rust",
] }
jsonwebtoken = "9.3.0"

# ethers
ethers = "2.0.14"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
ethers-core = "2.0.14"

# web-service
actix-web = { version = "4.8.0" }
actix-cors = "0.7.0"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
url = "2.5.2"
actix-files = "0.6.6"
actix-web-httpauth = "0.8.2"
