[package]
name = "openapi-ethers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
ethers.workspace = true
ethers-contract.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
once_cell.workspace = true
futures.workspace = true
chrono.workspace = true
parking_lot.workspace = true
# silius.workspace = true
