[package]
name = "openapi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-proto.workspace = true
openapi-ethers.workspace = true
openapi-logger.workspace = true

tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
ethers.workspace = true
ethers-contract.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
once_cell.workspace = true
futures.workspace = true
chrono.workspace = true
parking_lot.workspace = true
actix-cors.workspace = true
actix-web.workspace = true
actix-web-httpauth.workspace = true
actix-files.workspace = true
blockscout-service-launcher.workspace = true
clap.workspace = true
dotenv.workspace = true
hex.workspace = true
grammers-client.workspace = true
grammers-session.workspace = true
uuid.workspace = true
sha2.workspace = true
hmac.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
