[package]
name = "zion-service-db"
version = "0.1.0"
edition = "2021"

[dependencies]
zion-logger.workspace = true

diesel.workspace = true
diesel-async.workspace = true
diesel_async_migrations.workspace = true
diesel-enum.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true
futures.workspace = true
dotenv.workspace = true
chrono.workspace = true
num-traits.workspace = true
num-derive.workspace = true
thiserror.workspace = true
ethers.workspace = true
uuid.workspace = true
tonic.workspace = true
