[package]
name = "zion-aa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_json_path = "0.6.7"
serde_yaml = "0.9.34"
serde_with = { version = "3.9.0", features = ["hex", "base64"] }
anyhow = "1.0.81"
hex = "0.4.3"
async-trait = "0.1.81"
once_cell = "1.19.0"

# ethers
ethers = "2.0.14"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
ethers-core = "2.0.14"
