[package]
name = "zion-aa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_json_path = "0.6.7"
serde_yaml = "0.9.34"
serde_with = { version = "3.9.0", features = ["hex", "base64"] }
anyhow = "1.0.81"
hex = "0.4.3"
async-trait = "0.1.81"
once_cell = "1.19.0"
rustc-hex = "2.1.0"
derive_more = "0.99.17"
rand = "0.8.5"
regex = "1.10.5"
ark-groth16 = "0.4.0"
fastcrypto-zkp = "0.1.3"
jsonwebtoken = "9.3.0"
bytes = "1.7.1"

# ethers
ethers = "2.0.14"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
ethers-core = "2.0.14"

[dev-dependencies]
mockall = "0.13.0"
parking_lot = "0.12.3"
